# pizzarr

./: .Rbuildignore  .gitattributes  .gitignore  CONTRIBUTING.md  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  NEWS.md  README.Rmd  README.md  RUST-STYLE.md  dev.md  index.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: R-CMD-Check.yml  conformance.yml  pkgdown.yml  rhub.yaml
R/: array-nested.R  config.R  creation.R  extendr-wrappers.R  indexing.R  meta.R  normalize.R  numcodecs.R  onload.R  options.R  slicing.R  storage-utils.R  stores.R  utils.R  zarr-array.R  zarr-group.R  zarrs-bridge.R  zarrs-dispatch.R
inst/: WORDLIST
inst/extdata/: benchmark-xarray.py  benchmark-zarrs-vs-xarray.R
man/: BloscCodec.Rd  Bz2Codec.Rd  CODEC_CONSTRUCTORS.Rd  DirectoryStore.Rd  GcsStore.Rd  GzipCodec.Rd  HttpStore.Rd  Lz4Codec.Rd  LzmaCodec.Rd  MemoryStore.Rd  S3Store.Rd  Store.Rd  ZarrArray.Rd  ZarrGroup.Rd  ZlibCodec.Rd  ZstdCodec.Rd  can_use_zarrs.Rd  can_use_zarrs_create.Rd  can_use_zarrs_write.Rd  compressor_to_preset.Rd  get_codec.Rd  init_array.Rd  is_zarrs_available.Rd  pizzarr_compiled_features.Rd  pizzarr_config.Rd  pizzarr_option_defaults.Rd  pizzarr_sample.Rd  pizzarr_upgrade.Rd  raw_to_double_from_int64.Rd  selection_to_ranges.Rd  zarr_create.Rd  zarrs_close_store.Rd  zarrs_compiled_features.Rd  zarrs_create_array.Rd  zarrs_get_subset.Rd  zarrs_node_exists.Rd  zarrs_open_array_metadata.Rd  zarrs_retrieve_subset.Rd  zarrs_runtime_info.Rd  zarrs_set_codec_concurrent_target.Rd  (+3 more)
pkgdown/: _pkgdown.yml  extra.css
src/: Makevars.in  Makevars.wasm  Makevars.win.in  entrypoint.c  pizzarr-win.def
src/rust/: Cargo.toml
src/rust/src/: array_open.rs  create.rs  dtype_dispatch.rs  error.rs  http_config.rs  info.rs  lib.rs  metadata.rs  retrieve.rs  runtime.rs  store.rs  store_cache.rs  store_open.rs  transpose.rs
tests/fixtures/: http_github_pattern.yml
tests/testthat/: helper-vcr.R  setup-utils.R  test-01-parallel.R  test-array.R  test-compat.R  test-compression.R  test-config.R  test-get.R  test-http-store.R  test-onload.R  test-options.R  test-utils.R  test-v3.R  test-zarrs-bridge.R  test-zarrs-create.R  test-zarrs-dispatch.R  test-zarrs-gcs.R  test-zarrs-http.R  test-zarrs-metadata.R  test-zarrs-retrieve.R  test-zarrs-s3.R  test-zarrs-store-cache.R  test-zarrs-write.R
tools/: config.R  cran-build.sh  cran-strip.sh  entrypoint-wasm.c
vignettes/: basics.Rmd  ome-ngff.Rmd  parallel.Rmd  remote-anndata.Rmd  remote-ome-ngff.Rmd  zarrs-backend.Rmd
